force-app/main/default/objects/Contact/fields/AceptoPoliticaPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>AceptoPoliticaPrivacidad__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Añadido a los consentimientos de GDPR</description>
    <label>Acepto política de privacidad</label>
    <type>Checkbox</type>
</CustomField>