force-app/main/default/objects/Contact/fields/CargaInicial__c.field-meta.xml
<CustomField>
    <fullName>CargaInicial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar que el registro procede de la migración inicial</description>
    <label>Carga Inicial</label>
    <type>Checkbox</type>
</CustomField>