force-app/main/default/objects/Contact/fields/CorreoElectronicoSecundario__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoSecundario__c</fullName>
    <description>Correo electrónico secundario para los contactos</description>
    <label>Correo Electrónico Secundario</label>
    <type>Email</type>
</CustomField>