force-app/main/default/objects/Contact/fields/DeseoRecibirComunicacionesComerciales__c.field-meta.xml
<CustomField>
    <fullName>DeseoRecibirComunicacionesComerciales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deseo recibir comunicaciones comerciales de Arriaga Asociados en función de mi comportamiento y mis preferencias personales, en los términos previstos en la Política de Privacidad.</description>
    <inlineHelpText>Deseo recibir comunicaciones comerciales de Arriaga Asociados en función de mi comportamiento y mis preferencias personales, en los términos previstos en la Política de Privacidad.</inlineHelpText>
    <label>Deseo recibir comunicaciones comerciales</label>
    <type>Checkbox</type>
</CustomField>