force-app/main/default/objects/Contact/fields/DocumentoIdentidad__c.field-meta.xml
<CustomField>
    <fullName>DocumentoIdentidad__c</fullName>
    <complianceGroup>GDPR;LOPD</complianceGroup>
    <description>Documento de identidad (DNI) del contacto asociado a una cuenta empresarial</description>
    <label>Documento Identidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>