force-app/main/default/objects/Contact/fields/EnlaceSiteGDPREnviado__c.field-meta.xml
<CustomField>
    <fullName>EnlaceSiteGDPREnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está marcado significa que ya se le ha enviado el correo electrónico con el enlace al site de GDPR, por lo que no hay que volverlo a enviar.</description>
    <label>Enlace Site GDPR Enviado (Contacto)</label>
    <type>Checkbox</type>
</CustomField>