force-app/main/default/objects/Contact/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>IBAN del cliente</description>
    <inlineHelpText>24 caracteres, sin espacios</inlineHelpText>
    <label>IBAN</label>
    <length>24</length>
    <type>Text</type>
</CustomField>