force-app/main/default/objects/Contact/fields/lcs_gdpr__CanStorePiiElsewhere__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__CanStorePiiElsewhere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Almacenar datos personales en otro lugar</label>
    <type>Checkbox</type>
</CustomField>