force-app/main/default/objects/Contact/fields/lcs_gdpr__HasOptedOutProfiling__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutProfiling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No aplicar perfil</label>
    <type>Checkbox</type>
</CustomField>