force-app/main/default/objects/Contact/fields/NombreApellidoEmail__c.field-meta.xml
<CustomField>
    <fullName>NombreApellidoEmail__c</fullName>
    <description>Se unen estos campos para buscar duplicados en los datos proporcionados en los formularios web</description>
    <formula>UPPER( TRIM( FirstName ) &amp;  TRIM( LastName ) &amp;  TRIM( Email ))</formula>
    <label>Nombre Apellido Email</label>
    <type>Text</type>
</CustomField>