force-app/main/default/objects/Contact/fields/OM_FormattedName__c.field-meta.xml
<CustomField>
    <fullName>OM_FormattedName__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TRIM(LOWER(FirstName)+LOWER(LastName)),&quot; &quot;,&quot;&quot;),&quot;  &quot;,&quot;&quot;),&quot;á&quot;,&quot;a&quot;),&quot;é&quot;,&quot;e&quot;),&quot;í&quot;,&quot;i&quot;),&quot;ó&quot;,&quot;o&quot;),&quot;ú&quot;,&quot;u&quot;),&quot;à&quot;,&quot;a&quot;),&quot;è&quot;,&quot;e&quot;),&quot;ì&quot;,&quot;i&quot;),&quot;ò&quot;,&quot;o&quot;),&quot;ù&quot;,&quot;u&quot;),&quot;â&quot;,&quot;a&quot;),&quot;ê&quot;,&quot;e&quot;),&quot;î&quot;,&quot;i&quot;),&quot;ô&quot;,&quot;o&quot;),&quot;û&quot;,&quot;u&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Name</label>
    <type>Text</type>
</CustomField>