force-app/main/default/objects/Contact/fields/RepresentanteLegal__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteLegal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica qué contacto asociado a una cuenta empresarial es el representante legal</description>
    <label>Representante legal</label>
    <type>Checkbox</type>
</CustomField>