force-app/main/default/objects/Contact/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <description>Tipo de documento de identificación, implementa una lista de valores globales</description>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDocumento</valueSetName>
    </valueSet>
</CustomField>