force-app/main/default/objects/Contact/validationRules/Control_Documento_Identificativo_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Documento_Identificativo_Contact</fullName>
    <active>false</active>
    <description>Controla si el tipo de documento es correcto</description>
    <errorConditionFormula>AND (
NOT (ISNEW()),
OR (
ISPICKVAL(TipoDocumento__c,&quot;&quot;),
ISPICKVAL(TipoDocumento__c,&quot;CIF&quot;),
OR (ISNULL(DocumentoIdentidad__c), DocumentoIdentidad__c=&quot;&quot;),
AND(
NOT(ISPICKVAL(TipoDocumento__c,&quot;CIF&quot;)),
OR (ISNUMBER(RIGHT(DocumentoIdentidad__c,1)), DocumentoIdentidad__c=&quot;&quot;))
)
)</errorConditionFormula>
    <errorMessage>Si usted está creando un Contacto de una Empresa o Persona Jurídica, el Tipo de Documento no puede ser CIF. Verifique el Tipo y/o el Documento</errorMessage>
</ValidationRule>