force-app/main/default/objects/Contact/validationRules/NombreObligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>NombreObligatorio</fullName>
    <active>true</active>
    <description>El nombre del cliente debe estar relleno</description>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorMessage>El nombre es obligatorio</errorMessage>
</ValidationRule>